// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<IconContainer/> should match snapshot when we add an icon description 1`] = `
<div
  className="sc-AxjAm jnRBqU sc-AxiKw dZhqUg"
  color="#fff"
>
  <span
    className="sc-AxirZ fXcNDM"
  >
    checked icon circle
  </span>
  Foobar
  <div
    className="sc-AxhCb glDImV"
    marginHeight={12.5}
    marginWidth={12.5}
  >
    <svg
      aria-hidden={true}
      height={25}
      viewBox="0 0 20 20"
      width={25}
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        Checked circle
      </title>
      <circle
        cx="10"
        cy="10"
        fill="#fff"
        r="10"
      />
      <path
        d="M8.232 13.89l.707.706 5.656-5.657-1.414-1.415-4.243 4.243-2.122-2.122-1.414 1.415 2.828 2.83z"
        fill="#333"
      />
    </svg>
  </div>
</div>
`;

exports[`<IconContainer/> should match snapshot when we change color 1`] = `
<div
  className="sc-AxjAm jnRBqU sc-AxiKw dZhqUg"
  color="#fff"
>
  Foobar
  <div
    className="sc-AxhCb glDImV"
    marginHeight={12.5}
    marginWidth={12.5}
  >
    <svg
      aria-hidden={true}
      height={25}
      viewBox="0 0 20 20"
      width={25}
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        Checked circle
      </title>
      <circle
        cx="10"
        cy="10"
        fill="#fff"
        r="10"
      />
      <path
        d="M8.232 13.89l.707.706 5.656-5.657-1.414-1.415-4.243 4.243-2.122-2.122-1.414 1.415 2.828 2.83z"
        fill="#333"
      />
    </svg>
  </div>
</div>
`;

exports[`<IconContainer/> should match snapshot when we change position 1`] = `
<div
  className="sc-AxjAm jnRBqU sc-AxiKw bGMCBI"
  color="#fff"
>
  Foobar
  <div
    className="sc-AxhCb hPSgKR"
    marginHeight={12.5}
    marginWidth={12.5}
  >
    <svg
      aria-hidden={true}
      height={25}
      viewBox="0 0 20 20"
      width={25}
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        Checked circle
      </title>
      <circle
        cx="10"
        cy="10"
        fill="#fff"
        r="10"
      />
      <path
        d="M8.232 13.89l.707.706 5.656-5.657-1.414-1.415-4.243 4.243-2.122-2.122-1.414 1.415 2.828 2.83z"
        fill="#333"
      />
    </svg>
  </div>
</div>
`;

exports[`<IconContainer/> should match snapshot when we change width and height 1`] = `
<div
  className="sc-AxjAm jnRBqU sc-AxiKw dhUboA"
  color="#fff"
>
  Foobar
  <div
    className="sc-AxhCb kbpXSs"
    marginHeight={25}
    marginWidth={15}
  >
    <svg
      aria-hidden={true}
      height={50}
      viewBox="0 0 20 20"
      width={30}
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        Checked circle
      </title>
      <circle
        cx="10"
        cy="10"
        fill="#fff"
        r="10"
      />
      <path
        d="M8.232 13.89l.707.706 5.656-5.657-1.414-1.415-4.243 4.243-2.122-2.122-1.414 1.415 2.828 2.83z"
        fill="#333"
      />
    </svg>
  </div>
</div>
`;

exports[`<IconContainer/> should match snapshot with default behavior 1`] = `
<div
  className="sc-AxjAm jnRBqU sc-AxiKw dZhqUg"
  color="#fff"
>
  Foobar
  <div
    className="sc-AxhCb glDImV"
    marginHeight={12.5}
    marginWidth={12.5}
  >
    <svg
      aria-hidden={true}
      height={25}
      viewBox="0 0 20 20"
      width={25}
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        Checked circle
      </title>
      <circle
        cx="10"
        cy="10"
        fill="#fff"
        r="10"
      />
      <path
        d="M8.232 13.89l.707.706 5.656-5.657-1.414-1.415-4.243 4.243-2.122-2.122-1.414 1.415 2.828 2.83z"
        fill="#333"
      />
    </svg>
  </div>
</div>
`;
